# ORIGAMID

./: CMakeLists.txt  COPYING  COPYING.LESSER  README.md
include/crypto_sqlite/: crypto_sqlite.h
include/crypto_sqlite/crypto/: IDataCrypt.h  PlaintextCrypt.h
sqlite/: CMakeLists.txt
src/: crypto_sqlite.cpp
src/crypto/: Crypto.cpp  Crypto.h  FileWrapper.h
src/csqlite/: SQLite3Mutex.h  csqlite.c  csqlite.h
src/file/: File.cpp  File.h
src/vfs/: VFS.cpp  VFS.h
test/: BasicTest.cpp  BasicTest.h  CMakeLists.txt  CryptoTest.cpp  CryptoTest.h  TestCrypt.h
